commit de la tarea anterior